yaml/ing/ingress-single-2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
spec:
  rules:
  - host: api.mycompany.com
    http:
     paths:
     - path: /v1
       pathType: Prefix
       backend:
         service:
           name: backend-v1
           port:
             number: 3000
