yaml/ing/partner-api.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: partner-api
  namespace: integrations
spec:
  podSelector:
    matchLabels:
      service: webhook
  policyTypes:
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 172.16.0.0/16
        except:
        - 172.16.5.50/32
    ports:
    - protocol: TCP
      port: 443
