yaml/ing/secure-backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: secure-backend
  namespace: services
spec:
  podSelector:
    matchLabels:
      component: api
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: client
      namespaceSelector:
        matchLabels:
          env: production
    ports:
    - protocol: TCP
      port: 9000
